--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 JWT_ACCESS_SECRET=farah_2024_2025
 JWT_REFRESH_SECRET=ref_sec_2024
+EMAIL_USER=odayaqel61@gmail.com
+EMAIL_PASS=pkwnhgsedyceuqjq
 HASH_PASS=10
 PORT=3000
 MONGODB_URI="mongodb+srv://OdayAqel:Pass123@cluster.djpgm.mongodb.net/?retryWrites=true&w=majority&appName=Cluster/ClinicOfficeSystem"
