--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ EMAIL_PASS=pkwnhgsedyceuqjq
 HASH_PASS=10
 PORT=3000
 MONGODB_URI="mongodb+srv://OdayAqel:Pass123@cluster.djpgm.mongodb.net/?retryWrites=true&w=majority&appName=Cluster/ClinicOfficeSystem"
-FRONTEND_URL="https://ameerbadran.github.io/test-deploy/"
+# FRONTEND_URL="https://ameerbadran.github.io/test-deploy/"
